--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -32,7 +32,7 @@
                     android:layout_height="wrap_content"
                     android:text="@{viewModel.currentDate}"
                     android:textColor="@color/text_black"
-                    android:textSize="18dp"
+                    android:textSize="22dp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -104,7 +104,7 @@
                             android:gravity="center"
                             android:maxLines="2"
                             android:textColor="@color/text_black"
-                            android:textSize="16dp"
+                            android:textSize="20dp"
                             android:textStyle="bold"
                             app:layout_constraintEnd_toEndOf="@+id/imageView"
                             app:layout_constraintStart_toStartOf="@+id/imageView"
@@ -118,7 +118,7 @@
                             android:gravity="center"
                             android:maxLines="2"
                             android:textColor="@color/text_black"
-                            android:textSize="16dp"
+                            android:textSize="20dp"
                             android:textStyle="bold"
                             app:layout_constraintEnd_toEndOf="@+id/imageView3"
                             app:layout_constraintStart_toStartOf="@+id/imageView3"
@@ -162,7 +162,7 @@
                                 android:gravity="center"
                                 android:maxLines="2"
                                 android:textColor="@color/text_black"
-                                android:textSize="20dp"
+                                android:textSize="24dp"
                                 android:textStyle="bold"
                                 app:layout_constraintBottom_toBottomOf="parent"
                                 app:layout_constraintEnd_toEndOf="parent"
@@ -437,7 +437,7 @@
                                 android:layout_marginStart="10dp"
                                 android:text='@{"섭취 칼로리: " + viewModel.breakfastNutrients.calories + "kcal"}'
                                 android:textColor="@color/text_gray"
-                                android:textSize="10dp"
+                                android:textSize="14dp"
                                 app:layout_constraintBottom_toBottomOf="parent"
                                 app:layout_constraintStart_toEndOf="@+id/ivBreakfast"
                                 app:layout_constraintTop_toBottomOf="@+id/textView4" />
@@ -462,6 +462,8 @@
                                 android:layout_marginStart="10dp"
                                 android:text="아침"
                                 android:textColor="@color/text_black"
+                                android:textSize="18dp"
+                                android:textStyle="bold"
                                 app:layout_constraintBottom_toBottomOf="parent"
                                 app:layout_constraintStart_toEndOf="@+id/ivBreakfast"
                                 app:layout_constraintTop_toTopOf="parent"
@@ -501,6 +503,8 @@
                                 android:layout_marginStart="10dp"
                                 android:text="점심"
                                 android:textColor="@color/text_black"
+                                android:textSize="18dp"
+                                android:textStyle="bold"
                                 app:layout_constraintBottom_toBottomOf="parent"
                                 app:layout_constraintStart_toEndOf="@+id/ivLunch"
                                 app:layout_constraintTop_toTopOf="parent"
@@ -513,7 +517,7 @@
                                 android:layout_marginStart="10dp"
                                 android:text='@{"섭취 칼로리: " + viewModel.lunchNutrients.calories + "kcal"}'
                                 android:textColor="@color/text_gray"
-                                android:textSize="10dp"
+                                android:textSize="14dp"
                                 app:layout_constraintBottom_toBottomOf="parent"
                                 app:layout_constraintStart_toEndOf="@+id/ivLunch"
                                 app:layout_constraintTop_toBottomOf="@+id/textView5" />
@@ -552,6 +556,8 @@
                                 android:layout_marginStart="10dp"
                                 android:text="저녁"
                                 android:textColor="@color/text_black"
+                                android:textSize="18dp"
+                                android:textStyle="bold"
                                 app:layout_constraintBottom_toBottomOf="parent"
                                 app:layout_constraintStart_toEndOf="@+id/ivDinner"
                                 app:layout_constraintTop_toTopOf="parent"
@@ -564,7 +570,7 @@
                                 android:layout_marginStart="10dp"
                                 android:text='@{"섭취 칼로리: " + viewModel.dinnerNutrients.calories + "kcal"}'
                                 android:textColor="@color/text_gray"
-                                android:textSize="10dp"
+                                android:textSize="14dp"
                                 app:layout_constraintBottom_toBottomOf="parent"
                                 app:layout_constraintStart_toEndOf="@+id/ivDinner"
                                 app:layout_constraintTop_toBottomOf="@+id/textView7" />
@@ -604,6 +610,8 @@
                                 android:layout_marginStart="10dp"
                                 android:text="간식 및 기타"
                                 android:textColor="@color/text_black"
+                                android:textSize="18dp"
+                                android:textStyle="bold"
                                 app:layout_constraintBottom_toBottomOf="parent"
                                 app:layout_constraintStart_toEndOf="@+id/ivSnack"
                                 app:layout_constraintTop_toTopOf="parent"
@@ -616,7 +624,7 @@
                                 android:layout_marginStart="10dp"
                                 android:text='@{"섭취 칼로리: " + viewModel.snackNutrients.calories + "kcal"}'
                                 android:textColor="@color/text_gray"
-                                android:textSize="10dp"
+                                android:textSize="14dp"
                                 app:layout_constraintBottom_toBottomOf="parent"
                                 app:layout_constraintStart_toEndOf="@+id/ivSnack"
                                 app:layout_constraintTop_toBottomOf="@+id/textView8" />
