--- a/app/src/main/res/layout/calendar_day_layout.xml
+++ b/app/src/main/res/layout/calendar_day_layout.xml
@@ -19,26 +19,28 @@
         tools:text="22" />
 
     <View
-        android:id="@+id/memoIndicator"
-        android:layout_width="8dp"
-        android:layout_height="8dp"
-        android:layout_gravity="bottom|center_horizontal"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/red_dot"
-        android:visibility="gone"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <View
         android:id="@+id/intakeIndicator"
         android:layout_width="8dp"
         android:layout_height="8dp"
         android:layout_gravity="bottom|center_horizontal"
-        android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"
         android:background="@drawable/blue_dot"
         android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.4"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <View
+        android:id="@+id/memoIndicator"
+        android:layout_width="8dp"
+        android:layout_height="8dp"
+        android:layout_gravity="bottom|center_horizontal"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/red_dot"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.6"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
