--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -66,6 +66,7 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="10dp"
                 android:layout_marginBottom="80dp"
+                android:background="@color/background"
                 app:cv_dayViewResource="@layout/calendar_day_layout"
                 app:cv_monthHeaderResource="@layout/calendar_day_titles_container"
                 app:layout_constraintBottom_toTopOf="@+id/diary"
@@ -78,10 +79,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
+                android:layout_marginEnd="20dp"
                 android:text="메모하기"
-                android:textColor="@color/text_black"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.579"
+                android:textColor="@color/delete_red"
+                app:layout_constraintEnd_toStartOf="@+id/selectDate"
+                app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/calendarView" />
 
@@ -100,12 +102,13 @@
             <TextView
                 android:id="@+id/diary"
                 android:layout_width="0dp"
-                android:layout_height="200dp"
+                android:layout_height="250dp"
                 android:layout_marginStart="30dp"
                 android:layout_marginEnd="30dp"
                 android:layout_marginBottom="100dp"
                 android:background="@drawable/border_section_white"
-                android:gravity="center"
+                android:gravity="center|start"
+                android:padding="20dp"
                 android:text="작성된 메모가 없습니다"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
