--- a/app/src/main/res/layout/fragment_meal_detail.xml
+++ b/app/src/main/res/layout/fragment_meal_detail.xml
@@ -53,14 +53,14 @@
                         android:gravity="center"
                         android:textSize="16dp"
                         android:textStyle="bold"
-                        app:layout_constraintBottom_toTopOf="@+id/imageView4"
+                        app:layout_constraintBottom_toTopOf="@+id/imageSample"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.0"
                         app:layout_constraintStart_toEndOf="@+id/btnBack"
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <ImageView
-                        android:id="@+id/imageView4"
+                        android:id="@+id/imageSample"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
@@ -81,7 +81,7 @@
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/imageView4">
+                        app:layout_constraintTop_toBottomOf="@+id/imageSample">
 
                         <TextView
                             android:id="@+id/calories"
@@ -127,6 +127,18 @@
                             app:layout_constraintStart_toEndOf="@+id/protein"
                             app:layout_constraintTop_toTopOf="parent" />
                     </androidx.constraintlayout.widget.ConstraintLayout>
+
+                    <ImageView
+                        android:id="@+id/cameraBtn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="20dp"
+                        app:layout_constraintBottom_toTopOf="@+id/imageSample"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="1.0"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:srcCompat="@drawable/ic_camera" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
