Style : customAdd 디자인 수정 및 자잘한 스타일 변경

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -82,6 +82,8 @@
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="150dp"
                     android:layout_marginEnd="10dp"
+                    android:background="@color/white"
+                    app:cardBackgroundColor="@color/white"
                     app:cardCornerRadius="16dp"
                     app:cardElevation="8dp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -91,7 +93,7 @@
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:background="@drawable/border_section_white"
+                        android:background="@color/white"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent">
@@ -404,6 +406,8 @@
                     android:layout_marginTop="100dp"
                     android:layout_marginEnd="10dp"
                     android:layout_marginBottom="100dp"
+                    android:background="@color/white"
+                    app:cardBackgroundColor="@color/white"
                     app:cardCornerRadius="16dp"
                     app:cardElevation="8dp"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -415,7 +419,7 @@
                         android:id="@+id/todayDietSection"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:background="@drawable/border_section_white">
+                        android:background="@color/white">
 
                         <androidx.constraintlayout.widget.ConstraintLayout
                             android:id="@+id/breakfastLayout"
