--- a/app/src/main/res/layout/fragment_today_summary_detail.xml
+++ b/app/src/main/res/layout/fragment_today_summary_detail.xml
@@ -60,6 +60,7 @@
                 android:layout_marginStart="30dp"
                 android:layout_marginTop="100dp"
                 android:layout_marginEnd="30dp"
+                android:background="@color/white"
                 app:cardBackgroundColor="@color/white"
                 app:cardCornerRadius="16dp"
                 app:cardElevation="8dp"
@@ -69,7 +70,8 @@
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:background="@color/white">
 
 
                     <androidx.constraintlayout.widget.ConstraintLayout
@@ -253,7 +255,7 @@
                 android:layout_marginStart="30dp"
                 android:layout_marginTop="100dp"
                 android:layout_marginEnd="30dp"
-                android:background="@drawable/border_section_light_blue"
+                android:background="@color/light_blue"
                 app:cardBackgroundColor="@color/light_blue"
                 app:cardCornerRadius="16dp"
                 app:cardElevation="8dp"
@@ -263,7 +265,8 @@
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:background="@color/light_blue">
 
                     <!-- 내부 위젯들 -->
                     <TextView
@@ -434,6 +437,8 @@
                 android:layout_marginTop="100dp"
                 android:layout_marginEnd="30dp"
                 android:layout_marginBottom="100dp"
+                android:background="@color/white"
+                app:cardBackgroundColor="@color/white"
                 app:cardCornerRadius="16dp"
                 app:cardElevation="8dp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -443,7 +448,8 @@
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:background="@color/white">
 
                     <!-- 내부 위젯들 -->
                     <com.google.android.material.appbar.AppBarLayout
